data/derived/comb/progs/unify/prog4812.ml.out
Characters 42-44:
  let stringOfList f l = List.map sepConcat "";;
                                            ^^
Error: This expression has type string but an expression was expected of type
         string list
